# seqinf

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.md
docs/_templates/: autosummary.md
docs/_templates/autosummary/: module.rst
docs/reference/documentation/: index.md  sphinx.md
seqinf/: __init__.py  collector.py  diagnostic.py  dropout.py  flow.py  posterior.py  sequential.py  util.py
seqinf/estimators/: nflows_bflow.py
seqinf/methods/: __init__.py  posterior.py
seqinf/net_builders/: bflow.py
seqinf/trainers/: bnpe_c.py
seqinf/transforms/: bflow.py  made.py
